(docs) Update homepage template.

--- a/docs/source/default/patterns/01-atoms/button/button.twig
+++ b/docs/source/default/patterns/01-atoms/button/button.twig
@@ -12,7 +12,7 @@ Defaults
 Classes
 #}
 {% set classes = [
-  'flex items-center justify-center inline-flex border-2 py-1 focus:outline-none transition-colors duration-500',
+  'cursor-pointer flex items-center justify-center inline-flex border-2 py-1 focus:outline-none transition-colors duration-500',
   expanded ? 'w-full',
   variant == 'outline' ? 'border-2',
   round ? 'border-2 rounded-3xl',
