--- a/docs/source/default/patterns/02-molecules/code-block/code-block.twig
+++ b/docs/source/default/patterns/02-molecules/code-block/code-block.twig
@@ -1,6 +1,9 @@
-<div class="relative overflow-hidden md:rounded-xl shadow-2xl flex CodeWindow_root__1fMBP Hero_codeWindow__1W0zH bg-light-blue-500 pb-6 md:pb-0">
-  <div class="absolute inset-0 bg-black bg-opacity-75"></div>
-  <div class="relative w-full flex flex-col">
+<div
+  x-data="{key: '{{ codes|first.key }}'}"
+  class="relative overflow-hidden md:rounded-xl shadow-2xl flex bg-light-blue-500 pb-6 md:pb-0">
+  <div class="absolute inset-0 bg-code-500"></div>
+  <div class="relative w-full flex flex-col"
+  >
     <div class="flex-none h-11 flex items-center px-4">
       <div class="flex space-x-1.5">
         <div class="w-3 h-3 border-2 rounded-full border-red-500"></div>
@@ -8,36 +11,32 @@
         <div class="w-3 h-3 border-2 rounded-full border-green-500"></div>
       </div>
     </div>
+    <ul class="flex text-sm bg-code-700" style="transform:translateY(0%) translateZ(0)">
+      {%- for code_item in codes -%}
+      <li class="flex-none">
+        <button type="button"
+                @click="key='{{ code_item.key }}'"
+                class="border border-transparent py-2 px-4 font-medium focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-code-700 text-white"
+              :class="{'bg-code-500' : key === '{{ code_item.key }}'}">
+          {{ code_item.title }}
+        </button>
+      </li>
+      {% endfor %}
+    </ul>
     <div class="relative border-t border-white border-opacity-10 min-h-0 flex-auto flex flex-col">
       <div class="hidden md:block absolute inset-y-0 left-0 bg-gray-700" style="width:50px"></div>
       <div class="w-full flex-auto flex min-h-0 overflow-auto">
-        <div class="w-full relative flex-auto">
-          <pre class="flex min-h-full text-xs md:text-sm">
-            <div aria-hidden="true" class="hidden md:block text-white text-opacity-50 flex-none py-4 pr-4 text-right select-none" style="width:50px">1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
+        {%- for code_item in codes -%}
+          <div class="w-full relative flex-auto"
+          x-show="key === '{{ code_item.key }}'"
+          >
+          <pre class="flex text-xs md:text-sm">
+            <div class="flex relative block text-white pt-4 pb-4 px-4 overflow-auto js-hightlight-container">
+              <code style="padding-top:0 !important;" class="code-block language-{{ code_item.format }}">{{- code_item.code|trim -}}</code>
             </div>
-            <div class="flex-auto relative block text-white pt-4 pb-4 px-4 overflow-auto">{{ content }}</div>
           </pre>
-        </div>
+          </div>
+        {% endfor %}
       </div>
     </div>
   </div>
