(docs) Update docs frontpage.

--- a/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/avatar/avatar.twig
@@ -37,14 +37,14 @@
   </div>
   <div class="pt-6 space-y-4 flex-1">
     <blockquote>
-      <p class="text-lg font-semibold">
+      <div class="text-lg font-semibold">
         {{ text }}
-      </p>
+      </div>
     </blockquote>
     <figcaption>
-      <p class="text-teal-600">
+      <div class="text-teal-600">
         {{ full_name }}
-      </p>
+      </div>
     </figcaption>
     <div class="pt-4">
       {{ button }}
