--- a/docs/source/default/patterns/01-atoms/video/video.twig
+++ b/docs/source/default/patterns/01-atoms/video/video.twig
@@ -1,7 +1,7 @@
 {# TEMPLATE #}
 {% if video is empty and src is not empty %}
-  <video controls>
-    <source src="{{ file_url('ws-assets://videos/' ~ src ) }}" type="video/mp4">
+  <video autoplay muted loop class="w-full">
+    <source src="{{ file_url('ws-assets://videos/' ~ src ) }}" type="video/mp4"/>
     Your browser does not support the video tag.
   </video>
 {% else %}
