--- a/packages/cli/src/generators/component/templates/app/plain/pattern.stories.jsx.ejs
+++ b/packages/cli/src/generators/component/templates/app/plain/pattern.stories.jsx.ejs
@@ -3,10 +3,10 @@ import '<%= cleanPatternType %>/<%= name %>';
 import { RenderTwig } from '@wingsuit-designsystem/storybook';<% if (useDoc == 'mdx') { %>
 import mdx from '<%= cleanPatternType %>/<%= name %>/<%= name %>.mdx';
 <% } %>
-const <%= name %>Template = require('./<%= name %>.twig');
+const template = require('./<%= name %>.twig');
 
 export default {
-  title: '<%= capitalizeCleanPatternType %>/<%= capitalizeName %>',<% if (useDoc == 'mdx') { %>
+  title: '<%= cleanPatternType %>/<%= capitalizeName %>',<% if (useDoc == 'mdx') { %>
   parameters: {
     docs: {
       page: mdx,
@@ -14,4 +14,4 @@ export default {
   },<% } %>
 };
 
-export const <%= capitalizeName %> = () => <RenderTwig data={<%= name %>Template} />;
+export const Demo = () => <RenderTwig data={template} />;
