--- a/packages/cli/src/generators/component/templates/app/presentation/pattern.stories.jsx.ejs
+++ b/packages/cli/src/generators/component/templates/app/presentation/pattern.stories.jsx.ejs
@@ -2,10 +2,10 @@ import React from 'react';
 import { RenderTwig } from '@wingsuit-designsystem/storybook';<% if (useDoc == 'mdx') { %>
 import mdx from './<%= name %>.mdx';
 <% } %>
-const <%= name %>Template = require('./<%= name %>.twig');
+const template = require('./<%= name %>.twig');
 
 export default {
-  title: '<%= patternType %>/<%= capitalizeName %>',<% if (useDoc == 'mdx') { %>
+  title: '<%= cleanPatternType %>/<%= capitalizeName %>',<% if (useDoc == 'mdx') { %>
   parameters: {
     docs: {
       page: mdx,
@@ -13,4 +13,4 @@ export default {
   },<% } %>
 };
 
-export const <%= capitalizeName %> = () => <RenderTwig data={<%= name %>Template} />;
+export const Demo = () => <RenderTwig data={template} />;
