--- a/packages/cli/src/generators/component/templates/ds/base/index.js.ejs
+++ b/packages/cli/src/generators/component/templates/ds/base/index.js.ejs
@@ -2,5 +2,5 @@
  * <%= name %>
  */
 import './<%= name %>.twig';
-import './<%= name %>.wingsuit.yml';
+<% if (useWingsuit) { %>import './<%= name %>.wingsuit.yml';<% } %>
 <% if (useCss) { %>import './<%= name %>.css';<%="\n"%><% } %><% if (useScss) { %>import './<%= name %>.scss';<%="\n"%><% } %><% if (useJs) { %>import './<%= name %>.behavior';<%="\n"%><% } %>
