--- a/docs/source/default/patterns/03-organisms/section-code/section-code.twig
+++ b/docs/source/default/patterns/03-organisms/section-code/section-code.twig
@@ -6,35 +6,42 @@
   bg: bg
 } %}
   {% block content %}
+
     <div x-data="{feature: null, key: '{{ data|first.key }}'}">
       <div class="pb-10">
-        {% include "@atoms/rich-text/rich-text.twig" with {text: content} %}
+      {% include "@atoms/rich-text/rich-text.twig" with {text: content, variant: 'large'} only %}
       </div>
+      {% if badge_headline is not empty %}
+        <div class="pb-2">
+          {% include "@atoms/rich-text/rich-text.twig" with {text: '<h3>' ~ badge_headline ~ '</h3>', variant: 'large'} only %}
+        </div>
+      {% endif %}
       <div
-      {{ create_attribute().addClass([
-      'space-x-3 flex',
-        data|length == 1 ? 'hidden'
-      ]) }}
+        {{ create_attribute().addClass([
+          'space-x-3 flex pb-8',
+          data|length == 1 ? 'hidden'
+        ]) }}
       >
         {% for item in data %}
-          {% include "@atoms/button/button.twig" with {
+          {% include "@atoms/badge/badge.twig" with {
             text: item.title, variant: 'default',
             round: true,
             attributes: create_attribute().setAttribute(
               '@click', 'key=\'' ~ item.key ~'\''
             ).setAttribute (
-              ':class', "{ 'shadow-md': key === '" ~ item.key ~ "' }"
+              ':class', "{ 'bg-black text-white': key === '" ~ item.key ~ "' }"
             )
           } only %}
-
         {% endfor %}
       </div>
       {% for item in data %}
+
         {% set code_block %}
-            {% include "@molecules/code-block/code-block.twig"
-              with {
-              codes: item.codes
-            } %}
+          {% include "@molecules/code-block/code-block.twig"
+            with {
+            variant: 'dark',
+            codes: item.codes
+          } %}
         {% endset %}
         {% set content %}
           <div x-data="{key: '{{ item.contents|first.key }}'}">
@@ -42,32 +49,50 @@
               'pb-4',
               item.contents|length == 1 ? 'hidden'
             ]) }}>
-          {% for content in item.contents %}
-            {% include "@atoms/button/button.twig" with {
-              text: content.title, variant: 'default',
-              round: true,
-              attributes: create_attribute().setAttribute(
-                '@click', 'key=\'' ~ content.key ~'\''
-              ).setAttribute (
-                ':class', "{ 'shadow-md': key === '" ~ content.key ~ "' }"
-              )
-            } only %}
-          {% endfor %}
+              {% for content in item.contents %}
+                {% include "@atoms/badge/badge.twig" with {
+                  text: content.title, variant: 'default',
+                  attributes: create_attribute().setAttribute(
+                    '@click', 'key=\'' ~ content.key ~'\''
+                  ).setAttribute (
+                    ':class', "{ 'shadow-md': key === '" ~ content.key ~ "' }"
+                  )
+                } only %}
+              {% endfor %}
             </div>
-          {% for content in item.contents %}
-            <div x-show="key === '{{ content.key }}'">{{ content.content }}</div>
-          {% endfor %}
+            {% for content in item.contents %}
+              <div x-show="key === '{{ content.key }}'">
+                {% include "@molecules/code-block/code-block.twig"
+                  with {
+                  variant: 'light',
+                  codes: [
+                    {
+                      image_url: content.image_url,
+                      content: content.content
+                    }
+                  ]
+
+                } %}
+              </div>
+            {% endfor %}
           </div>
         {% endset %}
-        <div class="pt-10" x-show="key === '{{ item.key }}'">
-          {% embed "@organisms/grid/grid.twig" with {
-            columns: 2,
-            cells: [
-              content,
-              code_block
-            ]
-          } only %}
-          {% endembed %}
+        <div x-show="key === '{{ item.key }}'">
+          {% if item.intro is not empty %}
+            <div class="pb-6">
+            {% include "@atoms/rich-text/rich-text.twig" with {text: item.intro, variant: 'large'} only %}
+            </div>
+          {% endif %}
+          <div class="pt-8">
+            {% embed "@organisms/grid/grid.twig" with {
+              columns: 2,
+              cells: [
+                content,
+                code_block
+              ]
+            } only %}
+            {% endembed %}
+          </div>
         </div>
 
       {% endfor %}
