(docs) Update frontpage docs.

--- a/docs/apps/pages/pages/docs.twig
+++ b/docs/apps/pages/pages/docs.twig
@@ -10,5 +10,5 @@
   menu: pattern_preview('menu', {}, 'primary'),
   footer_menu: null,
   show_hamburger: true,
-  content: pattern('rich_text', {text: content})
+  content: pattern('rich_text', {text: content}, 'default')
 } %}
