--- a/docs/source/default/patterns/03-organisms/header/header.twig
+++ b/docs/source/default/patterns/03-organisms/header/header.twig
@@ -1,17 +1,17 @@
 {# SETTINGS #}
 {% set header_classes = ([
   'header-offset bg-teal-200 w-full z-30 top-0 text-white',
-  variant == 'fixed'? 'fixed h-16 w-full p-4 lg:p-0',
+  variant == 'fixed'? 'fixed h-16 w-full p-4 md:p-0',
   variant == 'sticky'? 'sticky py-2',
 ]) | sort | join(' ') | trim %}
 
 {% set github_logo_classes = ([
-  show_hamburger == true ? 'hidden lg:block',
+  show_hamburger == true ? 'hidden md:block',
 ]) | sort | join(' ') | trim %}
 
 {# TEMPLATE #}
 <header class="{{ header_classes }}">
-  <div class=" h-full flex justify-between lg:justify-none items-center md:max-w-7xl">
+  <div class=" h-full flex justify-between md:justify-none items-center md:max-w-7xl">
     <div class="w-3/6 md:w-2/6 max-w-xs md:max-w-7xl ml-3">
       <div class="flex items-center">
         {% include "@atoms/logo/logo.twig" only %}
@@ -19,7 +19,7 @@
       </div>
     </div>
     {% if show_hamburger == true %}
-      <div class="block lg:hidden" @click="menuIsOpen = !menuIsOpen">
+      <div class="block md:hidden" @click="menuIsOpen = !menuIsOpen">
         {% include "@atoms/hamburger/hamburger.twig" only %}
       </div>
     {% endif %}
@@ -39,7 +39,7 @@
     </div>
 
     {% if menu_top is not empty %}
-      <div class="hidden lg:flex flex-1">
+      <div class="hidden md:flex flex-1">
         {{ menu_top }}
       </div>
     {% endif %}
