--- a/docs/source/default/patterns/02-molecules/next/next.twig
+++ b/docs/source/default/patterns/02-molecules/next/next.twig
@@ -1,13 +1,6 @@
-{% for item in items %}
-<div class="shadow-xl rounded-lg flex py-3 px-6 w-full border-black">
-  <div class="flex-grow"><b>{{ item.title }}</b><br>{{item.text }}</div>
-  {% include "@atoms/button/button.twig" with {
-    "variant": "default",
-    "text": item.link_title,
-    "size": "medium",
-    "color": "primary",
-    "url": item.href,
-    "icon_alignment": "right"
-  } %}
+<div class="shadow bg-white flex py-3 px-6 w-full mb-8">
+  <div class="flex-grow pr-4"><b>{{ title }}</b><br>{{ text }}</div>
+  <div>
+    {{ button }}
+  </div>
 </div>
-{% endfor %}
